# evaluating-machine

./: MANIFEST.in  README.md  pyproject.toml
src/evaluating_machine/: config.py  machina.yaml
